--- a/Creating_Dataset _MFCC.ipynb
+++ b/Creating_Dataset _MFCC.ipynb
@@ -242,7 +242,7 @@
     "    fullpath, class_id = dc.path_class(data,data.slice_file_name[i])\n",
     "    try:\n",
     "        X, sample_rate = librosa.load(fullpath, res_type='kaiser_fast')\n",
-    "        mfccs = np.mean(librosa.feature.melspectrogram(y=X, sr=sample_rate, n_mfcc=40).T,axis=0)\n",
+    "        mfccs = np.mean(librosa.feature.mfcc(y=X, sr=sample_rate, n_mfcc=40).T,axis=0)\n",
     "    except Exception:\n",
     "        print(\"Error encountered while parsing file: \", file)\n",
     "        mfccs,class_id = None, None\n",
